# nl2sql

./: .gitignore  CLAUDE.md  LICENSE  README.md  push_to_hf.py  pyproject.toml  run_pipeline.py  test_baseline.py  test_tokenizer.py  train.sh
.claude/: .gitignore  settings.json
.claude/agents/: code-reviewer.md  evaluation.md  github-workflow.md  training.md
.claude/skills/data-processing/: SKILL.md
.claude/skills/nl2sql-training/: SKILL.md
.claude/skills/prompt-patterns/: SKILL.md
.claude/skills/sql-evaluation/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/workflows/: pr-review.yml
data/: DATASET_SUMMARY.md
models/: codellama_chat.jinja
nl2sql_data/unified/: sample_train.jsonl
notebooks/: data_check.ipynb  dspy.ipynb  models_check.ipynb
src/misc_scipts/: push_to_hf.py
src/nl2sql/: __init__.py
src/nl2sql/data/: __init__.py  download_all_datasets.py  prepare_unsloth_data.py  push_to_hf.py  synthetic_augmentation.py
src/nl2sql/eval/: __init__.py  baseline.py  finetune_lora.py  sft.py
src/nl2sql/llm/: __init__.py  anthropic_provider.py  base.py  config.py  dspy_adapter.py  factory.py  openai_compat.py  rate_limiter.py
src/nl2sql/optim/: __init__.py  config.py  dspy_fewshot.py  dspy_optim.py  optimizers.py  textgrad_optim.py
src/nl2sql/optim/configs/: bootstrap_fewshot.yaml  copro.yaml  default.yaml  knn_fewshot.yaml  labeled_fewshot.yaml  mipro.yaml
src/nl2sql/optim/configs/llm/: providers.yaml
src/nl2sql/train/: __init__.py  train_curriculum_lora.py  train_unsloth.py  train_unsloth_complete.py  train_unsloth_response_only.py
src/nl2sql/utils/: __init__.py  config.py  util.py
