[project]
name = "nl2sql"
version = "0.0.1"
description = "Natural Language to SQL fine-tuning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.4.0",
    "transformers==4.56.0",       # ok for unsloth-zoo
    "datasets==3.6.0",            # valid on PyPI and <4.0 — satisfies unsloth-zoo
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sqlparse>=0.4.4",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "peft==0.13.0",
    "bitsandbytes==0.44.1",
    "accelerate>=1.4.0",
    "wandb>=0.16.0",
    "triton==3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

unsloth = [
    "unsloth @ git+https://github.com/unslothai/unsloth.git",
    "unsloth-zoo @ git+https://github.com/unslothai/unsloth-zoo.git",
    "trl>=0.19.1,<=0.24.0",
    "xformers==0.0.27.post2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nl2sql"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true