[project]
name = "nl2sql"
version = "0.1.0"
description = "Multi-dataset training pipeline for Text-to-SQL with LoRA fine-tuning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Asad Ismail"}
]
repository = "https://github.com/Asad-Ismail/nl2sql"
keywords = ["nlp", "text-to-sql", "fine-tuning", "transformers", "lora"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.0",
    "transformers==4.56.0",
    "datasets==3.6.0",
    "pandas==2.3.3",
    "numpy==2.3.5",
    "sqlparse==0.5.4",
    "tqdm==4.67.1",
    "scikit-learn==1.7.2",
    "peft==0.13.0",
    "bitsandbytes==0.48.2; sys_platform == 'linux'",
    "accelerate==1.12.0",
    "wandb==0.23.0",
    "openai==2.11.0",
    "dspy==3.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
==2025.12.5",
    "unsloth-zoo==2025.12.4",
    "trl==0.22.2",
    "xformers==0.0.33.post1t+https://github.com/unslothai/unsloth-zoo.git",
    "trl>=0.19.1,<=0.24.0",
    "xformers>=0.0.28",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nl2sql"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true